# ckanext-gtm

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/gtm/: helpers.py  plugin.py
ckanext/gtm/assets/: script.js  webassets.yml
ckanext/gtm/templates/: base.html
ckanext/gtm/tests/: test_plugin.py
