[metadata]
name = ckanext-gtm
version = 0.0.1
description = Just adds GTM Javascript into the base template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/datopian/ckanext-gtm
author = Datopian
author_email = datopian@datopian.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             gtm = ckanext.gtm.plugin:GtmPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/gtm/i18n/ckanext-gtm.pot
width = 80

[init_catalog]
domain = ckanext-gtm
input_file = ckanext/gtm/i18n/ckanext-gtm.pot
output_dir = ckanext/gtm/i18n

[update_catalog]
domain = ckanext-gtm
input_file = ckanext/gtm/i18n/ckanext-gtm.pot
output_dir = ckanext/gtm/i18n
previous = true

[compile_catalog]
domain = ckanext-gtm
directory = ckanext/gtm/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
